--- a/about.html
+++ b/about.html
@@ -26,6 +26,18 @@ TemplateMo 580 Woox Travel
 https://templatemo.com/tm-580-woox-travel
 
 -->
+<style>/* CSS for WhatsApp icon */
+.whatsapp-icon {
+  position: fixed;
+  bottom: 50px; /* Adjust as needed */
+  right: 50px; /* Adjust as needed */
+  z-index: 1000; /* Ensure it's above other content */
+}
+
+.whatsapp-icon img {
+  width: 70px; /* Adjust the size as needed */
+  height: auto;
+}</style>
   </head>
 
 <body>
@@ -253,7 +265,7 @@ https://templatemo.com/tm-580-woox-travel
 
 
   
-<footer>
+ <footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -262,6 +274,10 @@ https://templatemo.com/tm-580-woox-travel
         </div>
       </div>
     </div>
+      <!-- WhatsApp Icon -->
+    <div class="whatsapp-icon">
+      <a href="https://wa.me/+254722777553" target="_blank"><img src="whatsapp-removebg-preview.png" alt="WhatsApp" ></a>
+  </div>
   </footer>
 
 
