--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@ TemplateMo 580 Woox Travel
 https://templatemo.com/tm-580-woox-travel
 
 -->
+<style>/* CSS for WhatsApp icon */
+.whatsapp-icon {
+  position: fixed;
+  bottom: 50px; /* Adjust as needed */
+  right: 50px; /* Adjust as needed */
+  z-index: 1000; /* Ensure it's above other content */
+}
 
+.whatsapp-icon img {
+  width: 70px; /* Adjust the size as needed */
+  height: auto;
+}</style>
   </head>
 
 <body>
@@ -256,6 +267,10 @@ https://templatemo.com/tm-580-woox-travel
         </div>
       </div>
     </div>
+      <!-- WhatsApp Icon -->
+    <div class="whatsapp-icon">
+      <a href="https://wa.me/+254722777553" target="_blank"><img src="whatsapp-removebg-preview.png" alt="WhatsApp" ></a>
+  </div>
   </footer>
 
 
